--- a/homework/wdd-100/rates.html
+++ b/homework/wdd-100/rates.html
@@ -34,14 +34,14 @@
 
             <div id="banner"></div>
             <section id="middle-row-rates">
-                <div class="leftcoll">
+                <div class="leftcol">
                     <h3>Rates/Dates</h3>
                     <p class="parag">
 
                         This page will give information about what trips are available, when trips are available, and how much they cost. Prices and Dates for our 2016 Season <strong>GRAND CANYON THREE-NIGHT TRIP:</strong> 2016 Pricing and Dates Grand Canyon 3 night trips: $1,475 April 30 May 13, 20, 27, 30 June 3, 10, 17, 24, 28 July 1, 8, 15, 22, 29 August 5, 12, 19, 26 September 9, 17 <strong>GRAND CANYON SIX-NIGHT TRIP:</strong> (The dates listed will be the date that you spend the night in Marble Canyon. The launch date is the following day.) 2016 Pricing and Dates Grand Canyon 6 night trips: $2,550 April 25 May 8, 15, 22, 25, 29 June 5, 12, 19, 23, 26 July 3, 10, 17, 24, 31 August 7, 14, 21 September 4, 12 Salmon River 5 night trip (The dates listed will be the date that you spend the night in Salmon. The launch date is the following day.) 2016 Pricing and Dates Regular Rate: $1,540 Trip Dates June 3, 10, 17, 24 July 2 Desolation 6 night Trip 2016 Pricing and Dates Regular Rate: $1,790 Trip Dates July 10, 18, 26 Aug 3, 11, 19, 27 Sept 4</p>
                 </div>
-                <div class="rightcoll">
-                    <img class="grand" src="/images/grandcanyon.jpg">
+                <div class="rightcol">
+                    <img class="grand" src="/homework/wdd-100/grandcanyon.jpg">
                 </div>
             </section>
             <section id="bottom">
