--- a/homework/html/greenville-weather.html
+++ b/homework/html/greenville-weather.html
@@ -1,76 +1,82 @@
-
+<!doctype html>
 <html lang="en-us">
 
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/html-css.css">
     <meta name="viewport" content="width=device-width">
-    <title>Greenville SC Weather Info</title>
+    <title>Franklin Il Weather Info</title>
 </head>
 
 <body>
     <div class="container">
         <div id="wrapper">
-            <div class="container1">
-                <header id="header1">
-                    <nav id="page-nav">
+            <header id="header1">
+                <nav id="page-nav">
 
-                        <ul id="lo-hi">
-                            <li><a href="https://aaronator1992.github.io/"> Home </a> </li>
-                            <li><a href="/homework/html/franklin-weather.html"> Franklin</a> </li>
-                            <li><a href="/homework/html/springfield-weather.html"> Springfield</a> </li>
-                        </ul>
-                    </nav>
-                    <form id="page-search">
-                        <input type="search" placeholder="Search by city, zipcode" name="q">
-                        <input type="submit" name="submit">
-                    </form>
-                </header>
-            </div>
+                    <ul id="lo-hi">
+                        <li><a href="https://aaronator1992.github.io/"> Home </a></li>
+                        <li><a href="/homework/html/springfield-weather.html"> Springfield </a></li>
+                        <li><a href="/homework/html/franklin-weather.html"> Franklin </a></li>
+                    </ul>
+                </nav>
+                <form id="page-search">
+                    <input type="search" placeholder="Search by city, zipcode" name="q">
+                    <input type="submit" name="submit">
+                </form>
+
+            </header>
+
 
             <main>
-                <div class="container2">
-                    <h2 class="text">Greenville, Sc</h2>
-                    <ul id="hi-lo">
+                <div class="contain">
+                    <h2>Greenville, SC</h2>
 
-                        <li class="high"> High: 84&deg;<sup>F</sup> </li>
-                        <li>
-                            <div id="img">
-                                <!--<img src="/Images/weather-channel-partly-cloudy-icon_13836.png" alt="Partly Cloudy">--></div>
-                        </li>
-                        <li class="high"> Low: 55&deg;<sup>F</sup> </li>
-                        <li class="high"> Summary: Afternoon Thunderstorms </li>
-                        <li class="high"> Precip: 70% </li>
-                        <li class="high"> Wind: 15-20 </li>
-                        <li class="high"> Direction: West </li>
+                    <ul id="summary">
+                        <li class="margin-right"> Summary: Afternoon Thunderstorms </li>
+                        <li class="margin-right"> Precip: 70 </li>
+                        <li class="margin-right"> Wind: 15-20 </li>
+                        <li> Direction: West </li>
 
                     </ul>
 
-                    <div class="container3">
+                    <div class="summary">
+
+                        <p class="image-left"> High: 84&deg;<sup>F</sup> </p>
+                        <img src="/images/thunderstorms-icon.png" alt="Sunny icon">
+                        <p class="image-right"> Low: 55&deg;<sup>F</sup> </p>
+
+
+                    </div>
+                </div>
+
+                <div id="hourly">
+                    <div class="container">
                         <h2>A.M.</h2>
 
 
-                        <p>
-                            00:00 AM 55&deg; <sup>F</sup> 01:00 AM 56&deg; <sup>F</sup> 02:00 AM 56&deg; <sup>F</sup> 03:00 AM 56&deg; <sup>F</sup> 04:00 AM 57&deg; <sup>F</sup> 05:00 AM 57&deg; <sup>F</sup> 06:00 AM 58&deg; <sup>F</sup> 07:00 AM 62&deg; <sup>F</sup> 08:00 AM 63&deg; <sup>F</sup> 09:00 AM 67&deg; <sup>F</sup> 10:00 AM 70&deg; <sup>F</sup> 11:00 AM 73&deg; <sup>F</sup>
+                        <p class="hourly-idea-am">
+                            00:00 55&deg; <sup>F</sup> 01:00 56&deg; <sup>F</sup> 02:00 56&deg; <sup>F</sup> 03:00 56&deg; <sup>F</sup> 04:00 57&deg; <sup>F</sup> 05:00 57&deg; <sup>F</sup> 06:00 58&deg; <sup>F</sup> 07:00 62&deg; <sup>F</sup> 08:00 63&deg; <sup>F</sup> 09:00 67&deg; <sup>F</sup> 10:00 70&deg; <sup>F</sup> 11:00 73&deg; <sup>F</sup>
                         </p>
                     </div>
 
-                    <div class="container4">
+                    <div class="container2">
+
                         <h2>P.M.</h2>
-
-                        <p>
-                            12:00 PM 77&deg; <sup>F</sup> 13:00 PM 80&deg; <sup>F</sup> 14:00 PM 84&deg; <sup>F</sup> 15:00 PM 83&deg; <sup>F</sup> 16:00 PM 83&deg; <sup>F</sup> 17:00 PM 80&deg; <sup>F</sup> 18:00 PM 79&deg; <sup>F</sup> 19:00 PM 74&deg; <sup>F</sup> 20:00 PM 70&deg; <sup>F</sup> 21:00 PM 68&deg; <sup>F</sup> 22:00 PM 60&deg; <sup>F</sup> 23:00 PM-58&deg; <sup>F</sup>
+                        <p class="hourly-idea-pm">
+                            12:00 77&deg; <sup>F</sup> 13:00 80&deg; <sup>F</sup> 14:00 84&deg; <sup>F</sup> 15:00 83&deg; <sup>F</sup> 16:00 83&deg; <sup>F</sup> 17:00 80&deg; <sup>F</sup> 18:00 79&deg; <sup>F</sup> 19:00 74&deg; <sup>F</sup> 20:00 70&deg; <sup>F</sup> 21:00 68&deg; <sup>F</sup> 22:00 60&deg; <sup>F</sup> 23:00 58&deg; <sup>F</sup>
                         </p>
                     </div>
-
-
                 </div>
+
+
+
             </main>
-            <footer id="page-footer">&copy; 2017 WeatherForecast, Inc.
+            <footer id="page-footer">&copy; 2017 WeatherBlast, Inc.
                 <div class="contact">100 N Street
                     <br>Rexburg, ID</div>
             </footer>
-            <div class=c ontainer5>
+            <div class="image">
                 <img id="pic1" src="/images/IMG_1748.JPG" alt="sketch1">
                 <img id="pic2" src="/images/IMG_1749.JPG" alt="sketch2">
                 <img id="pic3" src="/images/IMG_1750.JPG" alt="sketch3">
