--- a/homework/html/springfield-weather.html
+++ b/homework/html/springfield-weather.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
@@ -16,63 +15,68 @@
                 <nav id="page-nav">
 
                     <ul id="lo-hi">
-
-                        <li><a href="https://aaronator1992.github.io/"> Home </a> </li>
-                        <li><a href="/homework/html/franklin-weather.html"> Franklin</a> </li>
-                        <li><a href="/homework/html/greenville-weather.html"> Greenville</a> </li>
-
+                        <li><a href="https://aaronator1992.github.io/"> Home </a></li>
+                        <li><a href="/homework/html/franklin-weather.html"> Franklin </a></li>
+                        <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
                     </ul>
                 </nav>
                 <form id="page-search">
                     <input type="search" placeholder="Search by city, zipcode" name="q">
                     <input type="submit" name="submit">
                 </form>
+
             </header>
 
 
             <main>
                 <div class="contain">
-                    <h2 class="text">Springfield, Il</h2>
-                    <ul id="hi-lo">
+                    <h2>Springfeild, Il</h2>
 
-                        <li>High: 77&deg;<sup>F</sup></li>
-                        <li>
-                            <div id="img">
-                                <!--<img src="/Images/weather-channel-partly-cloudy-icon_13836.png" alt="Partly Cloudy">--></div>
-                        </li>
-                        <li>Low: 48&deg;<sup>F</sup></li>
-                        <li>Summary: Northwest</li>
-                        <li>Precip: 0%</li>
-                        <li>Wind: 5 - 15</li>
-                        <li>Direction: Partly Cloudy</li>
+                    <ul id="summary">
+                        <li class="margin-right"> Summary: Partly Cloudy </li>
+                        <li class="margin-right"> Precip: 0 </li>
+                        <li class="margin-right"> Wind: 5-15 </li>
+                        <li> Direction: Northwest </li>
 
                     </ul>
 
+                    <div class="summary">
+
+                        <p class="image-left"> High: 77&deg;<sup>F</sup> </p>
+                        <img src="/images/Cloudy-icon.png" alt="Sunny icon">
+                        <p class="image-right"> Low: 48&deg;<sup>F</sup> </p>
+
+
+                    </div>
+                </div>
+
+                <div id="hourly">
                     <div class="container">
                         <h2>A.M.</h2>
 
 
-                        <p>
-                            00:00 AM 48&deg; <sup>F</sup> 01:00 AM 48&deg; <sup>F</sup> 02:00 AM 49&deg; <sup>F</sup> 03:00 AM 49&deg; <sup>F</sup> 04:00 AM 50&deg; <sup>F</sup> 05:00 AM 49&deg; <sup>F</sup> 06:00 AM 48&deg; <sup>F</sup> 07:00 AM 49&deg; <sup>F</sup> 08:00 AM 52&deg; <sup>F</sup> 09:00 AM 54&deg; <sup>F</sup> 10:00 AM 57&deg; <sup>F</sup> 11:00 AM 59&deg; <sup>F</sup>
+                        <p class="hourly-idea-am">
+                            00:00 48&deg; <sup>F</sup> 01:00 48&deg; <sup>F</sup> 02:00 49&deg; <sup>F</sup> 03:00 49&deg; <sup>F</sup> 04:00 50&deg; <sup>F</sup> 05:00 49&deg; <sup>F</sup> 06:00 48&deg; <sup>F</sup> 07:00 49&deg; <sup>F</sup> 08:00 52&deg; <sup>F</sup> 09:00 54&deg; <sup>F</sup> 10:00 57&deg; <sup>F</sup> 11:00 59&deg; <sup>F</sup>
                         </p>
                     </div>
 
                     <div class="container2">
-                        <h2>P.M.</h2>
 
-                        <p>
-                            12:00 PM 62&deg; <sup>F</sup> 13:00 PM 65&deg; <sup>F</sup> 14:00 PM 67&deg; <sup>F</sup> 15:00 PM 70&deg; <sup>F</sup> 16:00 PM 75&deg; <sup>F</sup> 17:00 PM 77&deg; <sup>F</sup> 18:00 PM 76&deg; <sup>F</sup> 19:00 PM 74&deg; <sup>F</sup> 20:00 PM 69&deg; <sup>F</sup> 21:00 PM 62&deg; <sup>F</sup> 22:00 PM 58&deg; <sup>F</sup> 23:00 PM 49&deg; <sup>F</sup>
+                        <h2>P.M.</h2>
+                        <p class="hourly-idea-pm">
+                            12:00 62&deg; <sup>F</sup> 13:00 65&deg; <sup>F</sup> 14:00 67&deg; <sup>F</sup> 15:00 70&deg; <sup>F</sup> 16:00 75&deg; <sup>F</sup> 17:00 77&deg; <sup>F</sup> 18:00 76&deg; <sup>F</sup> 19:00 74&deg; <sup>F</sup> 20:00 69&deg; <sup>F</sup> 21:00 62&deg; <sup>F</sup> 22:00 58&deg; <sup>F</sup> 23:00 49&deg; <sup>F</sup>
                         </p>
                     </div>
-
-
                 </div>
+
+
+
             </main>
-            <footer id="page-footer">&copy; 2017 WeatherForcast, Inc.
+            <footer id="page-footer">&copy; 2017 WeatherBlast, Inc.
                 <div class="contact">100 N Street
                     <br>Rexburg, ID</div>
             </footer>
-            <div>
+            <div class="image">
                 <img id="pic1" src="/images/IMG_1748.JPG" alt="sketch1">
                 <img id="pic2" src="/images/IMG_1749.JPG" alt="sketch2">
                 <img id="pic3" src="/images/IMG_1750.JPG" alt="sketch3">
