--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -15,9 +15,11 @@
                 <nav id="page-nav">
 
                     <ul id="lo-hi">
+                        <li><img class="logo" src="/images/weather_logo.png" width="500px" height="300px"></li>
                         <li><a href="https://aaronator1992.github.io/"> Home </a></li>
                         <li><a href="/homework/html/springfield-weather.html"> Springfield </a></li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
+
                     </ul>
                 </nav>
                 <form id="page-search">
@@ -56,8 +58,10 @@
 
 
                         <p class="hourly-idea-am">
-                            00:00 67&deg; <sup>F</sup> 01:00 67&deg; <sup>F</sup> 02:00 69&deg; <sup>F</sup> 03:00 69&deg; <sup>F</sup> 04:00 69&deg; <sup>F</sup> 05:00 70&deg; <sup>F</sup> 06:00 69&deg; <sup>F</sup> 07:00 72&deg; <sup>F</sup> 08:00 74&deg; <sup>F</sup> 09:00 77&deg; <sup>F</sup> 10:00 79&deg; <sup>F</sup> 11:00 81&deg; <sup>F</sup>
+                            0:00 67&deg; <sup>F</sup> 1:00 67&deg; <sup>F</sup> 2:00 69&deg; <sup>F</sup> 3:00 69&deg; <sup>F</sup> 4:00 69&deg; <sup>F</sup> 5:00 70&deg; <sup>F</sup> 6:00 69&deg; <sup>F</sup> 7:00 72&deg; <sup>F</sup> 8:00 74&deg; <sup>F</sup> 9:00 77&deg; <sup>F</sup> 10:00 79&deg; <sup>F</sup> 11:00 81&deg; <sup>F</sup>
+
                         </p>
+
                     </div>
 
                     <div class="container2">
