--- a/homework/html/greenville-weather.html
+++ b/homework/html/greenville-weather.html
@@ -15,6 +15,7 @@
                 <nav id="page-nav">
 
                     <ul id="lo-hi">
+                        <li><img class="logo" src="/images/weather_logo.png" width="500px" height="300px"></li>
                         <li><a href="https://aaronator1992.github.io/"> Home </a></li>
                         <li><a href="/homework/html/springfield-weather.html"> Springfield </a></li>
                         <li><a href="/homework/html/franklin-weather.html"> Franklin </a></li>
