--- a/index.html
+++ b/index.html
@@ -4,26 +4,36 @@
 <head>
     <meta charset="utf-8">
     <title> Temporary Homepage </title>
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:900|Raleway:300' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/homework/css/style.css">
 </head>
 
 
 <header>
-    <h1>Temporary Homepage</h1>
+
     <nav class="id">
-        <ul class="list">
+        <!--<ul class="list">
             <li><a href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li><a href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
             <li><a href="/homework/html/franklin-weather.html"> Weather Site</a></li>
             <li> <a href="/homework/wdd-100/index.html"> WDD-100 </a></li>
         </ul>
+        -->
     </nav>
 </header>
 
 
 <body>
-    <div>
+    <div class="container">
+        <h1>Temporary Homepage</h1>
+        <ul class="list">
+            <li> <a class="btn" href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
+            <li> <a class="btn" href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
+            <li> <a class="btn" href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
+            <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
+            <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a></li>
+        </ul>
         <h2> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
     </div>
