--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
     <nav class="id">
         <!--<ul class="list">
-            <li><a href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
-            <li><a href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
-            <li><a href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-            <li><a href="/homework/html/franklin-weather.html"> Weather Site</a></li>
-            <li> <a href="/homework/wdd-100/index.html"> WDD-100 </a></li>
-        </ul>
-        -->
+            <li> <a class="btn" href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
+            <li> <a class="btn" href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
+            <li> <a class="btn" href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
+            <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
+            <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a></li>
+</ul>-->
+
     </nav>
 </header>
 
@@ -34,7 +34,7 @@
             <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a></li>
         </ul>
-        <h2> aaronator1992.github.io</h2>
+        <h2 class="website"> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
     </div>
     <footer>
