--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/html-css.css">
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:900|Raleway:300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width">
     <title>Franklin Il Weather Info</title>
 </head>
@@ -12,10 +13,13 @@
     <div class="container">
         <div id="wrapper">
             <header id="header1">
+                <div>
+                    <img class="logo" src="/images/logo.png" width="100" height="100px">
+                </div>
                 <nav id="page-nav">
 
                     <ul id="lo-hi">
-                        <li><img class="logo" src="/images/weather_logo.png" width="500px" height="300px"></li>
+
                         <li><a href="https://aaronator1992.github.io/"> Home </a></li>
                         <li><a href="/homework/html/springfield-weather.html"> Springfield </a></li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
@@ -58,7 +62,7 @@
 
 
                         <p class="hourly-idea-am">
-                            0:00 67&deg; <sup>F</sup> 1:00 67&deg; <sup>F</sup> 2:00 69&deg; <sup>F</sup> 3:00 69&deg; <sup>F</sup> 4:00 69&deg; <sup>F</sup> 5:00 70&deg; <sup>F</sup> 6:00 69&deg; <sup>F</sup> 7:00 72&deg; <sup>F</sup> 8:00 74&deg; <sup>F</sup> 9:00 77&deg; <sup>F</sup> 10:00 79&deg; <sup>F</sup> 11:00 81&deg; <sup>F</sup>
+                            00:00 67&deg; <sup>F</sup> 01:00 67&deg; <sup>F</sup> 02:00 69&deg; <sup>F</sup> 03:00 69&deg; <sup>F</sup> 04:00 69&deg; <sup>F</sup> 05:00 70&deg; <sup>F</sup> 06:00 69&deg; <sup>F</sup> 07:00 72&deg; <sup>F</sup> 08:00 74&deg; <sup>F</sup> 09:00 77&deg; <sup>F</sup> 10:00 79&deg; <sup>F</sup> 11:00 81&deg; <sup>F</sup>
 
                         </p>
 
