--- a/homework/html/springfield-weather.html
+++ b/homework/html/springfield-weather.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="../css/html-css.css">
+    <link href='https://fonts.googleapis.com/css?family=Playfair+Display:900|Raleway:300' rel='stylesheet' type='text/css'>
     <meta name="viewport" content="width=device-width">
     <title>Springfield Il Weather Info</title>
 </head>
@@ -12,10 +13,13 @@
     <div class="container">
         <div id="wrapper">
             <header id="header1">
+                <div>
+                    <img class="logo" src="/images/logo.png" width="100" height="100px">
+                </div>
                 <nav id="page-nav">
 
                     <ul id="lo-hi">
-                        <li><img class="logo" src="/images/weather_logo.png" width="500px" height="300px"></li>
+
                         <li><a href="https://aaronator1992.github.io/"> Home </a></li>
                         <li><a href="/homework/html/franklin-weather.html"> Franklin </a></li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
