--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <header>
 
-    <nav class="id">
+    <!--<nav class="id">
         <ul class="list">
             <li> <a class="btn" href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li> <a class="btn" href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
@@ -22,6 +22,7 @@
         </ul>
 
     </nav>
+-->
 </header>
 
 
