--- a/homework/html/visitor_analysis_persona.html
+++ b/homework/html/visitor_analysis_persona.html
@@ -6,7 +6,7 @@
     <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>Visitor Analysis and Persona</title>
     <meta name="viewport" content="width=device-width">
-    <link rel="stylesheet" href="/homework/css/style.css">
+    <link rel="stylesheet" href="/homework/css/style2.css">
 </head>
 
 <body>
