--- a/index.html
+++ b/index.html
@@ -40,4 +40,5 @@
         <p> This is a temporary homepage served from a Github Repository</p>
     </div>
     <footer>
+        &copy; 2017 Aaron Ferguson
     </footer>
