--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -14,14 +14,14 @@
         <div id="wrapper">
             <header id="header1">
                 <div>
-                    <img class="logo" src="/images/logo.png" width="100" height="100px">
+                    <img class="logo" src="/images/logo.png" alt="logo for weathersite." width="100" height="100px">
                 </div>
                 <nav id="page-nav">
 
                     <ul id="lo-hi">
 
                         <li><a href="https://aaronator1992.github.io/"> Home </a></li>
-                        <li><a href="/homework/html/springfield-weather.html"> Springfield </a></li>
+                        <li><a href=""></a> <!--<a href="/homework/html/springfield-weather.html">--> Springfield </li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
 
                     </ul>
