--- a/homework/html/greenville-weather.html
+++ b/homework/html/greenville-weather.html
@@ -20,11 +20,9 @@
 
                     <ul id="lo-hi">
 
-                        <li><a href="https://aaronator1992.github.io/"> Home </a></li>
-                        <li>
-                            <a href=""></a>
-                            <!--<a href="/homework/html/springfield-weather.html">-->Springfield </li>
-                        <li><a href="/homework/html/franklin-weather.html"> Franklin </a></li>
+                        <li> <a href="https://aaronator1992.github.io/"> Home </a></li>
+                        <li> <a href="/homework/html/Springfield-Weather.html"> Springfield </a> </li>
+                        <li> <a href="/homework/html/franklin-weather.html"> Franklin </a></li>
                     </ul>
                 </nav>
                 <form id="page-search">
