--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -21,7 +21,7 @@
                     <ul id="lo-hi">
 
                         <li><a href="https://aaronator1992.github.io/"> Home </a></li>
-                        <li><a href=""></a> <!--<a href="/homework/html/springfield-weather.html">--> Springfield </li>
+                        <li> <a href="/homework/html/Springfield-Weather.html"> Springfield </a> </li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
 
                     </ul>
