--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -14,7 +14,9 @@
         <div id="wrapper">
             <header id="header1">
                 <div>
-                    <img class="logo" src="/images/logo.png" alt="logo for weathersite." width="100" height="100px">
+                    <a href="/homework/html/franklin-weather.html">
+                        <img class="logo" src="/images/logo.png" style="width:100px;height:100px;border:0;">
+                    </a>
                 </div>
                 <nav id="page-nav">
 
