--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -15,7 +15,7 @@
             <header id="header1">
                 <div>
                     <a href="/homework/html/franklin-weather.html">
-                        <img class="logo" src="/images/logo.png" style="width:100px;height:100px;border:0;">
+                        <img class="logo" alt="weather logo" src="/images/logo.png" style="width:100px;height:100px;border:0;">
                     </a>
                 </div>
                 <nav id="page-nav">
