--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
 
 
 <body>
+    <div>
+        <a href="/homework/html/franklin-weather.html">
+            <img class="logo" alt="weather logo" src="/images/logo.png" style="width:100px;height:100px;border:0;">
+        </a>
+    </div>
     <div class="container">
         <h1>Temporary Homepage</h1>
         <ul class="list">
@@ -36,6 +41,9 @@
             <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a></li>
         </ul>
+
+
+
         <h2 class="website"> aaronator1992.github.io</h2>
         <p> This is a temporary homepage served from a Github Repository</p>
     </div>
