social media links

--- a/index.html
+++ b/index.html
@@ -48,5 +48,14 @@
         <p> This is a temporary homepage served from a Github Repository</p>
     </div>
     <footer>
-        &copy; 2017 Aaron Ferguson
+
+
+        <div class="social">
+            <h2 class="copy">    &copy; 2017 Aaron Ferguson</h2>
+            <a target="_blank" href="https://www.facebook.com/"> <img src="/homework/wdd-100/social-inside-facebook-icon%20.png" alt="Facebook icon"></a>
+            <a target="_blank" href="https://twitter.com/"> <img src="/homework/wdd-100/social-inside-twitter-icon%20.png" alt="Twitter icon"></a>
+            <a target="_blank" href="https://www.linkedin.com/"> <img src="/homework/wdd-100/social%20-%20inside-LinkedIn-icon.png" alt="LinkedIn icon"></a>
+            <a target="_blank" href="https://www.youtube.com/"> <img src="/homework/wdd-100/social-inside-youtube-icon%20.png" alt="Youtube icon"></a>
+        </div>
     </footer>
+</body>
