link direction change

--- a/homework/html/greenville-weather.html
+++ b/homework/html/greenville-weather.html
@@ -14,7 +14,7 @@
         <div id="wrapper">
             <header id="header1">
                 <div>
-                    <a href="/homework/html/franklin-weather.html">
+                    <a href="https://aaronator1992.github.io/">
                         <img class="logo" alt="weather logo" src="/images/logo.png" style="width:100px;height:100px;border:0;">
                     </a>
 
