links for wdd 100

--- a/homework/wdd-100/rates.html
+++ b/homework/wdd-100/rates.html
@@ -15,7 +15,9 @@
 <body>
     <div id="content">
         <div id="logo">
-            <img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="Logo">
+            <a href="https://aaronator1992.github.io/">
+                <img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="Logo" style="width:100px;height:aut0;border:0;">
+            </a>
         </div>
         <header id="top-header">
             <div class="box">
