--- a/homework/wdd-100/index.html
+++ b/homework/wdd-100/index.html
@@ -14,8 +14,11 @@
 <body>
     <div id="content">
         <header id="top-header">
+
             <div id="logo">
-                <img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="Logo">
+                <a href="https://aaronator1992.github.io/">
+                    <img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="Logo" style="width:100px;height:auto;border:0;">
+                </a>
             </div>
             <div class="box">
                 <nav>
