--- a/homework/wdd-100/rivers.html
+++ b/homework/wdd-100/rivers.html
@@ -16,7 +16,7 @@
 <body>
     <div id="content">
         <div id="logo">
-            <a href="https://aaronator1992.github.io/">
+            <a href="https://aaronator1992.github.io">
                 <img src="http://brothert.net/dryoar/images/dryoarlogo.png" alt="Logo" style="width:100px;height:auto;border:0;">
             </a>
         </div>
