--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             <li> <a class="btn" href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li> <a class="btn" href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
             <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
+            <li> <a class="btn" href="/homework/responsive_media/index.html"> Responsive Media Demo</a></li>
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a></li>
         </ul>
 
