--- a/homework/responsive_media/index.html
+++ b/homework/responsive_media/index.html
@@ -37,7 +37,8 @@
                 Doctrina iis elit admodum do occaecat o tamen ex expetendis quorum arbitror, nostrud labore iis tempor despicationes, voluptate non duis est ea nulla arbitror proident, ne quem duis noster offendit, si labore enim e incurreret. Malis sempiternum senserit legam singulis, eu do amet proident si ne culpa tempor ad eu cupidatat eruditionem. Aute e laborum ab noster, ab velit nescius. Enim laboris qui exquisitaque, quorum qui incurreret. Eram se sed illum nescius. Singulis quo iudicem, litteris ne illum, quamquam anim quibusdam consequat, qui id amet nostrud.
             </p>
 
-            <video class="featured-video" controls preload="metadata"></video>
+            <video class="featured-video" src="/homework/responsive_media/images/pack_mules.mp4" controls preload="metadata">
+            </video>
 
             <p>
                 Eu aute iis lorem. Ab elit singulis, arbitror varias ne mentitum familiaritatem, sint domesticarum voluptate quae ullamco, mandaremus ita legam. Dolor iudicem non officia se sunt excepteur efflorescere, quibusdam malis sed mandaremus coniunctione iis do non eram quamquam iis fabulas nulla quamquam, fore admodum nam nisi malis, pariatur de irure appellat a iis et consectetur. Tamen iudicem ex velit varias, aut fugiat nisi te quamquam. Eram hic ullamco aut anim an si velit expetendis est ut dolore transferrem ad ingeniis do commodo. Ut ad anim excepteur ab e fugiat consectetur, litteris ab tempor, enim ex laborum ne velit, ex et fore ullamco ubi senserit eu litteris eu quamquam aliqua summis ut labore, eu cernantur despicationes.
