--- a/homework/html/springfield-weather.html
+++ b/homework/html/springfield-weather.html
@@ -50,7 +50,7 @@
                     <div class="summary">
 
                         <p class="image-left"> High: 77&deg;<sup>F</sup> </p>
-                        <img src="/images/Cloudy-icon.png" alt="Sunny icon">
+                        <img src="/images/partly-cloudy.gif" alt="Partly Cloudy">
                         <p class="image-right"> Low: 48&deg;<sup>F</sup> </p>
 
 
