--- a/homework/html/greenville-weather.html
+++ b/homework/html/greenville-weather.html
@@ -51,7 +51,7 @@
                     <div class="summary">
 
                         <p class="image-left"> High: 84&deg;<sup>F</sup> </p>
-                        <img src="/images/thunderstorms-icon.png" alt="Sunny icon">
+                        <img src="/images/thunderstorms.gif" alt="Afternoon thunderstorms">
                         <p class="image-right"> Low: 55&deg;<sup>F</sup> </p>
 
 
