link to home page

--- a/homework/responsive_media/index.html
+++ b/homework/responsive_media/index.html
@@ -26,7 +26,7 @@
             <h1 class="main-title">Grand Canyon National Park</h1>
 
             <figure class="featured-image">
-                <img src="/homework/responsive_media/images/bridge-2000.jpg" alt="Picture from the Grand Canyon">
+                <a href="https://aaronator1992.github.io/"><img src="/homework/responsive_media/images/bridge-2000.jpg" alt="Picture from the Grand Canyon"></a>
 
                 <figcaption class="image-caption">
                     Fun in the Grand Canyon
