--- a/homework/responsive_media/index.html
+++ b/homework/responsive_media/index.html
@@ -15,7 +15,7 @@
         </header>
         <nav class="page-nav">
             <ul>
-                <li><a href="#" title="Fake home page link">Home</a></li>
+                <li><a href="https://aaronator1992.github.io/" title="Home page link">Home</a></li>
                 <li><a href="#" title="Fake trails page link">Trails</a></li>
                 <li><a href="#" title="Fake lodging page link">Lodging</a></li>
                 <li><a href="#" title="Fake history page link">History</a></li>
