--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
             <li> <a class="btn" href="/homework/responsive_media/index.html"> Responsive Media Demo</a></li>
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a></li>
+            <li> <a class="btn" href="https://aaronatorblog.wordpress.com/"> Blog </a></li>
         </ul>
 
 
