--- a/homework/javascript/intro-jquery-files/Lesson4/index.htm
+++ b/homework/javascript/intro-jquery-files/Lesson4/index.htm
@@ -57,7 +57,9 @@
             <div class="logo" id="alcoveLogo"></div>
             <div class="navbar">
                 <ul class="navigation">
-                    <li><a href="#">About Us</a></li>
+                    <li><a href="https://aaronator1992.github.io/">
+                        Home
+                        </a></li>
                     <li><a href="#">Services</a></li>
                     <li><a href="#">Catalog</a></li>
                     <li><a href="#">Support</a></li>
@@ -163,14 +165,16 @@
 
         <div class="footer">
             <h5>© Alcove Digital Systems | <a href="#">Terms of Use</a></h5>
+            <div class = "list">
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><a href="/homework/javascript/intro-jquery-files/Lesson4/toggleButtonBegin.htm"> toggleButton </a></li>
+                <li><a href="/homework/javascript/intro-jquery-files/Lesson4/InsertHTMLBegin.htm"> insertHTML </a></li>
+                <li><a href="/homework/javascript/intro-jquery-files/Lesson4/fruitBasketBegin.htm"> fruitBasket </a></li>
+                <li><a href="/homework/javascript/intro-jquery-files/Lesson4/animatedMenuBegin.htm"> animatedMenu </a></li>
+                <li><a href="/homework/javascript/intro-jquery-files/Lesson4/DropDownMenuBegin.htm"> DropDownMenu </a></li>
+                <
             </ul>
+           </div>
         </div>
     </div>
 
