--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -51,7 +51,7 @@
                     <div class="summary">
 
                         <p class="image-left"> High: 90&deg;<sup>F</sup> </p>
-                        <img src="/images/sunny-day-folded-icon.png" alt="Sunny icon">
+                        <img src="/images/partly-cloudy.gif" alt="Sunny icon">
                         <p class="image-right"> Low: 66&deg;<sup>F</sup> </p>
 
 
