--- a/homework/javascript/intro-jquery-files/Lesson5/Codes.htm
+++ b/homework/javascript/intro-jquery-files/Lesson5/Codes.htm
@@ -8,7 +8,14 @@
     </script>
     <script>
     $(function(){
-        // jQuery Code goes here
+        $(document).on({keydown:function(evt){
+            $('.keyCode').html(evt.keyCode);
+        },
+                        keypress:function(evt){
+                            $('.charCode').html(evt.charCode);
+                        }
+
+                       })
 
     })
     </script>
