--- a/homework/javascript/intro-jquery-files/Lesson5/clickBox.htm
+++ b/homework/javascript/intro-jquery-files/Lesson5/clickBox.htm
@@ -4,11 +4,23 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" href="css/clickbox.css">
-    <!--<script src="js/jquery-3.0.0.min.js"></script>-->
+    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
+    </script>
     <script>
     $(function(){
-        // jQuery Code goes here
+    /*$('.boxHolder').on('click', 'li', function(){
+        $(this).addClass('greenBox');
+    })
 
+    $('.boxHolder').on('dblclick', 'li', function(){
+        $(this).addClass('orangeBox');
+    })*/
+        $('.boxHolder').on({click: function(){ $(this).addClass('greenBox').html($(this).index());},
+                            dblclick: function(){$(this).addClass('orangeBox').html($(this).index());},
+
+                            mouseenter: function(){$(this).css('opacity', 0.3); }, mouseleave: function(){$(this).css('opacity', 1.0); }
+
+                           }, "li")
     })
     </script>
 </head>
@@ -22,6 +34,5 @@
         <li></li>
     </ul>
 </body>
-    <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous">
-    </script>
+
 </html>
