--- a/homework/javascript/intro-jquery-files/Lesson5/CharacterCount.htm
+++ b/homework/javascript/intro-jquery-files/Lesson5/CharacterCount.htm
@@ -9,7 +9,15 @@
     </script>
     <script>
     $(function(){
-        // jQuery Code goes here
+        $('.textbox').on({keydown:function(){var countDown = 150 - $(this).val().length;
+                                             $('.countDisplay').html(countDown + '/150 Remaining');
+                                             if(countDown < 0){$(this).addClass('redWarning');} else {$(this).removeClass('redWarning');
+                                                }
+                                             },
+                          keyup:function(evt){if(evt.keyCode == 13){$('submitted').slidedown(500);
+                                                }
+                                             }
+                         })
 
     })
     </script>
