--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -23,6 +23,7 @@
                     <ul id="lo-hi">
 
                         <li><a href="https://aaronator1992.github.io/"> Home </a></li>
+                        <li><a href="/homework/html/homepage.html"> Homepage </a></li>
                         <li> <a href="/homework/html/springfield.html"> Springfield </a> </li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
 
