--- a/homework/html/greenville-weather.html
+++ b/homework/html/greenville-weather.html
@@ -24,6 +24,7 @@
                     <ul id="lo-hi">
 
                         <li> <a href="https://aaronator1992.github.io/"> Home </a></li>
+                        <li><a href="/homework/html/homepage.html"> Homepage </a></li>
                         <li> <a href="/homework/html/springfield.html"> Springfield </a> </li>
                         <li> <a href="/homework/html/franklin-weather.html"> Franklin </a></li>
                     </ul>
