--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
             <li> <a class="btn" href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
             <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
             <li> <a class="btn" href="/homework/responsive_media/index.html"> Responsive Media Demo</a></li>
+        </ul>
+        <ul class="list" class ="dropdownMenu">
             <li> <a class="btn" href="/homework/javascript/intro-jquery-files/Lesson4/index.htm"> jQuery</a></li>
+            <li> <a class="btn" href="/jsonweather-html/index.html">Weather Homepage</a></li>
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a>
             <li> <a class="btn" href="https://aaronatorblog.wordpress.com/"> Blog </a></li>
 
