--- a/jsonweather-html/index.html
+++ b/jsonweather-html/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <link rel="stylesheet" href="/jsonweather-html/css/weather-style.css" type="text/css" media="screen">
+    <script src="/jsonweather-html/scripts/jquery-3.0.0.min.js"> </script>
 </head>
 <!-- *********************************************
 * Who Did You Collaborate With On This Assessment?
@@ -29,7 +30,7 @@
         <h2>Current Conditions</h2>
         <ul id="current_conditions">
           <li id="currentTemp"></li>
-          <li id="summary"></li>
+          <li id="Summary"></li>
           <li id="add1"></li>
           <li id="add2"></li>
           <li id="add3"></li>
@@ -40,7 +41,7 @@
       <div id="footer-content"></div>
       <small>Last updated: </small>
     </footer>
-    <script src="/jsonweather-html/scripts/jquery-3.0.0.min.js"></a> </script>
+
             <script src="/jsonweather-html/scripts/modules.js">
       </script>
     <script src="scripts/remote_wu.js"></script>
