--- a/homework/html/homepage.html
+++ b/homework/html/homepage.html
@@ -6,7 +6,9 @@
 <link rel="stylesheet" href="../css/html-css.css">
 <link href='https://fonts.googleapis.com/css?family=Playfair+Display:900|Raleway:300' rel='stylesheet' type='text/css'>
 <meta name="viewport" content="width=device-width">
-<title>Springfield Il Weather Info</title>
+<title>Current Weather</title>
+    <script src="/jsonweather-html/scripts/jquery-3.0.0.min.js"> </script>
+    <script src="/jsonweather-html/scripts/remote_wu.js"></script>
 </head>
 
 <body>
@@ -38,44 +40,30 @@
 
 <main>
 <div class="contain">
-<h1>Springfeild, Il</h1>
+<h1></h1>
 
-<ul id="summary">
-<li class="margin-right"> Summary: Partly Cloudy </li>
-<li class="margin-right"> Precip: 0 </li>
-<li class="margin-right"> Wind: 5-15 </li>
-<li> Direction: Northwest </li>
+<ul id = "summary">
+<li id = "cityDisplay" class="margin-right"></li>
+<li id = "currentTemp" class="margin-right"></li>
+<li id = "Summary" class="margin-right"></li>
+<li> </li>
 
 </ul>
 
 <div class="summary">
 
-<p class="image-left"> High: 77&deg;<sup>F</sup> </p>
+<p class="image-left"> </p>
 <img src="/images/partly-cloudy.gif" alt="Partly Cloudy">
-<p class="image-right"> Low: 48&deg;<sup>F</sup> </p>
+<p class="image-right"></p>
 
 
 </div>
 </div>
 
-<div id="hourly">
-<div class="container">
-<h2>A.M.</h2>
 
 
-<p class="hourly-idea-am">
-00:00 48&deg; <sup>F</sup> 01:00 48&deg; <sup>F</sup> 02:00 49&deg; <sup>F</sup> 03:00 49&deg; <sup>F</sup> 04:00 50&deg; <sup>F</sup> 05:00 49&deg; <sup>F</sup> 06:00 48&deg; <sup>F</sup> 07:00 49&deg; <sup>F</sup> 08:00 52&deg; <sup>F</sup> 09:00 54&deg; <sup>F</sup> 10:00 57&deg; <sup>F</sup> 11:00 59&deg; <sup>F</sup>
-</p>
-</div>
 
-<div class="container2">
 
-<h2>P.M.</h2>
-<p class="hourly-idea-pm">
-12:00 62&deg; <sup>F</sup> 13:00 65&deg; <sup>F</sup> 14:00 67&deg; <sup>F</sup> 15:00 70&deg; <sup>F</sup> 16:00 75&deg; <sup>F</sup> 17:00 77&deg; <sup>F</sup> 18:00 76&deg; <sup>F</sup> 19:00 74&deg; <sup>F</sup> 20:00 69&deg; <sup>F</sup> 21:00 62&deg; <sup>F</sup> 22:00 58&deg; <sup>F</sup> 23:00 49&deg; <sup>F</sup>
-</p>
-</div>
-</div>
 
 
 
@@ -84,10 +72,7 @@
 <div class="contact">100 N Street
 <br>Rexburg, ID</div>
 </footer>
-<script src="/jsonweather-html/scripts/jquery-3.0.0.min.js"></a> </script>
-<script src="/jsonweather-html/scripts/modules.js">
-</script>
-<script src="scripts/remote_wu.js"></script>
+
 <div class="image">
 <img id="pic1" src="/images/IMG_1748.JPG" alt="sketch1">
 <img id="pic2" src="/images/IMG_1749.JPG" alt="sketch2">
