--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <li> <a class="btn" href="/homework/html/visitor_analysis_persona.html">Visitor Analysis</a></li>
             <li> <a class="btn" href="https://pocket86.github.io/design_principles_assessment/design_principles_assessment.html">Design Principles Assessment</a></li>
             <li> <a class="btn" href="/homework/html/weather_analysis_persona.html">Weather Analysis Persona</a></li>
-            <li> <a class="btn" href="/homework/html/franklin-weather.html"> Weather Site</a></li>
+            <li> <a class="btn" href="/homework/html/homepage.html"> Weather Site</a></li>
             <li> <a class="btn" href="/homework/responsive_media/index.html"> Responsive Media Demo</a></li>
         </ul>
         <ul class="list" class ="dropdownMenu">
