--- a/homework/html/homepage.html
+++ b/homework/html/homepage.html
@@ -53,7 +53,7 @@
 <div class="summary">
 
 <p class="image-left"> </p>
-<img src="/images/partly-cloudy.gif" alt="Partly Cloudy">
+    <img id ="img" src="https://icons.wxug.com/i/c/j/partlycloudy.gif" alt="Partly Cloudy">
 <p class="image-right"></p>
 
 
