--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         </ul>
         <ul class="list" class ="dropdownMenu">
             <li> <a class="btn" href="/homework/javascript/intro-jquery-files/Lesson4/index.htm"> jQuery</a></li>
-            <li> <a class="btn" href="/jsonweather-html/index.html">Weather Homepage</a></li>
+            <li> <a class="btn" href="/homework/html/homepage.html">Weather Homepage</a></li>
             <li> <a class="btn" href="/homework/wdd-100/index.html"> WDD-100 </a>
             <li> <a class="btn" href="https://aaronatorblog.wordpress.com/"> Blog </a></li>
 
