search page connected

--- a/homework/html/search.html
+++ b/homework/html/search.html
@@ -36,9 +36,10 @@
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"
                 integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
                 crossorigin = "anonymous"> </script>    <script src="/search/js/search.js"> </script>
-        <h2>Search results</h2>
+        <h1>Search results</h1>
     </section>
     </header>
+            <div id = "container">
 <main>
 <div>
 <div id="h1"></div>
@@ -49,6 +50,7 @@
 </div>
 
 </main>
+            </div>
         </div>
     </div>
 </body>
