--- a/homework/html/springfield-weather.html
+++ b/homework/html/springfield-weather.html
@@ -26,6 +26,7 @@
                         <li><a href="/homework/html/homepage.html"> Homepage </a></li>
                         <li><a href="/homework/html/franklin-weather.html"> Franklin </a></li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
+                        <li><a href="/search/html/search.html"> Search </a></li>
                     </ul>
                 </nav>
                 <form id="page-search">
