--- a/search/html/search.html
+++ b/search/html/search.html
@@ -6,7 +6,12 @@
  <link rel="stylesheet" href="/homework/css/html-css.css" type="text/css" media="screen">
 </head>
 <body>
-
+<!--*********************************************
+* Who Did You Collaborate With On This Activity?
+* 1. Parker Goldsberry
+* 2. Matt Soretone
+* 3. Morgan Orton
+*********************************************-->
 <header>
     <form method="get" action="//autocomplete.wunderground.com/aq" id="searchform">
         <input type="search" name="query" id="query">
