--- a/homework/html/franklin-weather.html
+++ b/homework/html/franklin-weather.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="../css/html-css.css">
     <meta name="viewport" content="width=device-width">
     <title>Franklin Il Weather Info</title>
-</head>
+    <script src="/jsonweather-html/scripts/jquery-3.0.0.min.js"> </script>
+    <script src="/jsonweather-html/scripts/remote_wu.js"></script>
+    </head>
 
 <body>
     <div class="container">
@@ -26,6 +28,7 @@
                         <li><a href="/homework/html/homepage.html"> Homepage </a></li>
                         <li> <a href="/homework/html/springfield.html"> Springfield </a> </li>
                         <li><a href="/homework/html/greenville-weather.html"> Greenville </a></li>
+                        <li><a href="/search/html/search.html"> Search </a></li>
 
                     </ul>
                 </nav>
