--- a/homework/html/greenville-weather.html
+++ b/homework/html/greenville-weather.html
@@ -27,6 +27,7 @@
                         <li><a href="/homework/html/homepage.html"> Homepage </a></li>
                         <li> <a href="/homework/html/springfield.html"> Springfield </a> </li>
                         <li> <a href="/homework/html/franklin-weather.html"> Franklin </a></li>
+                        <li><a href="/search/html/search.html"> Search </a></li>
                     </ul>
                 </nav>
                 <form id="page-search">
