--- a/homework/html/weather-homepage.html
+++ b/homework/html/weather-homepage.html
@@ -10,7 +10,17 @@
 </head>
 
 <body>
-
+    <form method="get" action="//autocomplete.wunderground.com/aq" id="searchform">
+        <input type="search" name="query" id="query">
+        <input type="submit" name="submit" value="Search" id="send">
+    </form>
+    <!--    Display the search results here  -->
+    <section id="searchResults">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"
+                integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+                crossorigin = "anonymous"> </script>    <script src="/search/js/search.js"> </script>
+        <h2>Search results</h2>
+    </section>
 <div class="container">
 <div id="wrapper">
 <header id="header1">
@@ -27,7 +37,7 @@
 <li> <a href="https://aaronator1992.github.io/"> Home </a></li>
 <li> <a href="/homework/html/springfield.html"> Springfield </a> </li>
 <li> <a href="/homework/html/franklin-weather.html"> Franklin </a></li>
-<li> <a href="/homework/html/search.html"> search </a></li>
+<li> <a href="/search/html/search.html"> search </a></li>
 </ul>
 </nav>
 <form id="page-search">
